# CapCutAI

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
AI4Video/: PIPELINE_GUIDE.md  README.md  README_API.md  analyze_tts_outputs.py  pipeline.py  pipeline_api.py  qwen25vl_video_demo.py  run_asr_compare.py  run_asr_test.py  run_editing_compare.py  run_glm_asr_test.py  run_omni_asr_test.py  run_omni_video_asr_test.py  run_tts_compare.py  run_vlm_test.py
ai-service/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
ai-service/app/: main.py
ai-service/app/api/: health_api.py  internal_agent_api.py
ai-service/app/config/: __init__.py  settings.py
ai-service/app/graph/: __init__.py  conversation_graph.py  state.py
ai-service/app/memory/: __init__.py  workspace_memory.py
ai-service/app/prompts/: __init__.py  conversation_prompt.py
ai-service/app/providers/: __init__.py  ai4video_provider.py  gemini_provider.py  openai_compatible_provider.py  router.py
ai-service/app/schemas/: message.py  respond_request.py  respond_response.py  video_editing.py
ai-service/app/services/: __init__.py  agent_service.py  editing_planner_service.py  hyperframes_service.py  native_render_service.py  reference_analysis_service.py  styled_video_service.py
ai-service/app/tools/: __init__.py  build_ai4video_package.py  build_hyperframes_draft.py  build_test_case_package.py  inspect_render_environment.py  render_hyperframes_bundle.py  render_native_video.py  workspace_tools.py
ai-service/output/: README.md
backend/: .dockerignore  (+5 more)
(+262 files in other folders)
