[project]
name = "capcutai-ai-service"
version = "0.1.0"
description = "FastAPI + LangGraph scaffold for CapCutAI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "langgraph>=0.2.50",
  "google-genai>=1.20.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
